Hello uses style.css

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -8,10 +8,20 @@
   <meta name="CocoaVersion" content="2113.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.5px '.AppleSystemUIFontMonospaced'; color: #45423d; -webkit-text-stroke: #45423d; background-color: #f2f2f1}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.5px '.SF NS Mono'; color: #45423d; -webkit-text-stroke: #45423d; background-color: #f2f2f1}
     span.s1 {font-kerning: none}
+    span.s2 {font: 10.5px '.AppleSystemUIFontMonospaced'; font-kerning: none}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>&lt;h1&gt;</b>Hello, World!<b>&lt;/h1&gt;</b></span></p>
+<p class="p1"><span class="s1">&lt;!-- Author: Alexander Shvets (alex@githowto.com) --&gt;</span></p>
+<p class="p1"><span class="s1">&lt;html&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;head&gt;</span></p>
+<p class="p2"><span class="s2"><b><span class="Apple-converted-space">    </span>&lt;link type="text/css" rel="stylesheet" media="all" href="style.css" /&gt;</b></span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/head&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;body&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;h1&gt;Hello, World!&lt;/h1&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/body&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
 </body>
 </html>
